--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     ports:
       - "5621:5601"
     environment:
-      SERVER_NAME: kibana.example.org
+      SERVER_NAME: localhost:5621
       ELASTICSEARCH_HOSTS: http://dbelastic:9200
   mongo_1:
     image: mongo:4.2
@@ -62,6 +62,40 @@ services:
     volumes:
       - "./data/postgres1_volume:/var/lib/postgresql/data/pgdata"
       - ./postgres-init.sh:/docker-entrypoint-initdb.d/init-user-db.sh
+  postgres_1:
+    image: postgres:13
+    container_name: postgres_1
+    networks:
+      - backend
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: 123456
+      PGDATA: /var/lib/postgresql/data/pgdata
+    ports:
+      - "5421:5432"
+    volumes:
+      - "./data/postgres1_volume:/var/lib/postgresql/data/pgdata"
+      - ./postgres-init.sh:/docker-entrypoint-initdb.d/init-user-db.sh
+  redis_1:
+    image: redis:6
+    container_name: redis_1
+    networks:
+      - backend
+    ports:
+      - "6321:6379"
+    command: redis-server --appendonly yes
+    volumes:
+      - "./data/redis1_volume:/data"
+  redis_2:
+    image: redis:6
+    container_name: redis_2
+    networks:
+      - backend
+    ports:
+      - "6322:6379"
+    command: redis-server --appendonly yes
+    volumes:
+      - "./data/redis2_volume:/data"
 networks:
   backend:
     driver: bridge
