--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,8 +43,9 @@ services:
       - MONGO_INITDB_DATABASE=bar
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=123
+    command: mongod --replSet=rs0 --port=27021
     ports:
-      - "27021:27017"
+      - "27021:27021"
     volumes:
       - "./data/mongo1_volume:/data/db"
       - ./mongo-docker-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
@@ -96,6 +97,19 @@ services:
     command: redis-server --appendonly yes
     volumes:
       - "./data/redis2_volume:/data"
+  rabbitmq_1:
+    image: rabbitmq:3-management
+    container_name: rabbitmq_1
+    environment:
+      - RABBITMQ_DEFAULT_USER=docker
+      - RABBITMQ_DEFAULT_PASS=docker
+    networks:
+      - backend
+    ports:
+      - "56721:5672"
+      - "16721:15672"
+    volumes:
+      - "./data/rabbitmq1_volume:/data"
 networks:
   backend:
     driver: bridge
